test/fixtures/themes/001-deprecations/invalid/partials/mypartial.hbs
{{content words='0'}}
{{author.cover}}

{{pageUrl}}
